# zero-hack

./: .editorconfig  .gitignore  .pre-commit-config.yaml  Agents.md  Claude.md  EDA_report.html  LICENSE  README.md  REPORT.md  anomaly.csv  arch_compare.json  baselines-and-data-generation.html  completion.csv  nextstep.csv  pyproject.toml
dashboard/: data.js  index.html
docs/: hackathon-overview.md  leonardo.md
local_scripts/: README.md  create_all_dataset_splits.sh  create_mixed_dataset_splits.sh  evaluate_classic_search.sh  generate_augmented_datasets.sh  generate_valid_datasets.sh  make_eval_sets.sh  rsync_from_scratch.sh  rsync_to_scratch.sh  run_family_holdouts.sh  train.sh
reports/: genwro_presentation.html
scripts/: aggregate_grpo_completion.py  baseline_predict.py  build_novel_splits.py  build_pseudo_splits.py  compare_baselines.py  compare_gpt_neurosymbolic.py  compare_ngram_residual.py  create_dataset_splits.py  create_mixed_dataset_splits.py  eval_completion.py  eval_gpt_ensemble.py  eval_lstm_anomaly.py  eval_lstm_anomaly_lr.py  eval_lstm_completion.py  eval_metrics.py  evaluate.py  generate_augmented_industrial.py  generate_augmented_sequences.py  generate_dpo_pairs.py  generate_novel_families.py  generate_pseudo_families.py  generate_unseen_data.py  grpo_finetune.py  make_all_eval_sets.py  make_eval_set.py  predict_eval.py  predict_gpt_submission.py  rsync_to_scratch.sh  run_grpo_completion_matrix.sh  run_holdout_experiments.py  run_llama_experiment.py  run_semantic_holdout.py  submit_create_dataset_splits.sh  submit_generate_valid_datasets.sh  (+2 more)
(+228 files in other folders)
